@@ -4103,7 +4103,7 @@ Default: false (but true for CRAN submission checks).
 
 @item _R_CHECK_GCT_N_
 Should the @option{--use-gct} use @code{gctorture2(@var{n})} rather than
-@code{gctorture(TRUE)}?  Use to a positive integer to enable this.
+@code{gctorture(TRUE)}?  Use a positive integer to enable this.
 Default: @code{0}.
 
 @item _R_CHECK_LIMIT_CORES_
@@ -4210,6 +4210,11 @@ Default: false (but true for CRAN submission checks).
 @item _R_CHECK_PACKAGES_USED_IN_TESTS_USE_SUBDIRS_
 If set to a true value, also check the R code in common unit test
 subdirectories of @file{tests} for undeclared package dependencies.
+Default: false (but true for CRAN submission checks).
+
+@item _R_CHECK_SHLIB_OPENMP_FLAGS_
+Check correct and portable use of @code{SHLIB_OPENMP_*FLAGS} in
+@file{src/Makevars} (and similar).
 Default: false (but true for CRAN submission checks).
 
 @end vtable
